--- a/GE/Zeugniseinstellungen.ini
+++ b/GE/Zeugniseinstellungen.ini
@@ -2,16 +2,16 @@
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Version
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
-; Format der INI-Datei vom 27.03.2020 (PlÃ¼mper)
-; INI-Datei fÃ¼r die Sek-I Zeugnisse der Gesamtschule (Anlagen 38 - 45)
+; Format der INI-Datei vom 27.03.2020 (Plümper)
+; INI-Datei für die Sek-I Zeugnisse der Gesamtschule (Anlagen 38 - 45)
 ;
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Allgemeines
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; Zeilen, die mit einem Semikolon beginnen sind Kommentare und werden ignoriert.
-; fÃ¼r jedes Zeugnis (Anlagen in der BASS) kÃ¶nnen hier die Einstellungen separat gesetzt werden. Dazu hat jedes Zeugnis einen Abschnitt
-; Es folgen nun die mÃ¶glichen Optionen zur Einstellung des Zeugnisverhaltens. Eine ErklÃ¤rung zu den Optionen findet sich am Ende der Datei
-; Nicht jede Einstellung wird von jedem Zeugnisformular unterstÃ¼tzt.
+; für jedes Zeugnis (Anlagen in der BASS) können hier die Einstellungen separat gesetzt werden. Dazu hat jedes Zeugnis einen Abschnitt
+; Es folgen nun die möglichen Optionen zur Einstellung des Zeugnisverhaltens. Eine Erklärung zu den Optionen findet sich am Ende der Datei
+; Nicht jede Einstellung wird von jedem Zeugnisformular unterstützt.
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 
 ; Anlage 38: Abschlussprognose Gesamtschule
@@ -26,10 +26,8 @@ UnterschriftenMitAmtsbezeichnungen=J
 UnterschriftenMitVornamen=J
 UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 
-; Anlagen 39 und 40: Zeugnis fÃ¼r Klassen 5-8 und 9-10, Gesamtschule
+; Anlagen 39 und 40: Zeugnis für Klassen 5-8 und 9-10, Gesamtschule
 [Anlage39u40]
 ZeugnisMitRand=N
 FarbeNotenfeld=192,192,192
@@ -52,15 +50,13 @@ UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=06
 VersetzungBeginnASDJahrgang=09
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 
-; Anlage 41: Ãœberweisungszeugnis Gesamtschule
+; Anlage 41: Überweisungszeugnis Gesamtschule
 [Anlage41]
 ZeugnisMitRand=N
 FarbeNotenfeld=192,192,192
 ZeugnisVorname=V
-ZeugnisDatumQuelle=F  
+ZeugnisDatumQuelle=E  
 ZeugnisDatumAngabe=30.12.1899
 UnterschriftenSLAL=S
 UnterschriftenSLALText=Schulleiter/in oder Vertretung
@@ -73,8 +69,6 @@ UnterschriftenMitVornamenNurErster=J
 UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 WPBeginnASDJahrgang=06
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 
 ; Anlagen 42: Abgangszeugnis Gesamtschule
 [Anlage42]
@@ -96,8 +90,6 @@ UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 SchulabschlussQuelle=H
 WPBeginnASDJahrgang=06
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 
 ; Anlagen 43: Abschlusszeugnis Hauptschulabschluss
 [Anlage43]
@@ -119,8 +111,6 @@ UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 SchulabschlussQuelle=H
 WPBeginnASDJahrgang=06
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 
 ; Anlagen 44: Abschlusszeugnis Hauptschulabschluss nach Klasse 10
 [Anlage44]
@@ -142,8 +132,6 @@ UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 SchulabschlussQuelle=H
 WPBeginnASDJahrgang=06
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 
 ; Anlage 45: Abschlusszeugnis Mittlerer Abschluss (3a ohne Q und 3b mit Q)
 [Anlage45]
@@ -165,57 +153,55 @@ UnterschriftenMitTitel=J
 UnterschriftenMitStvKlassenlehrer=N
 SchulabschlussQuelle=H
 WPBeginnASDJahrgang=06
-SchriftenInPDFEinbetten=N
-UnicodeInPDFVerwenden=N
 
 
 [Erklaerungen]
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
-; Angaben zu den mÃ¶glichen Optionen
+; Angaben zu den möglichen Optionen
 ; -------------------------------------------------------------------------------------------------------------------------------------------------------
 ; 
 ; ZeugnisMitRand 
 ; --------------
 ; legt fest, ob das Zeugnis mit einem Rand gedruckt werden soll. 
-; mÃ¶gliche Angaben: J=Ja und N=Nein
+; mögliche Angaben: J=Ja und N=Nein
 ;
 ; A3ZeugnisSeiten14Ausblenden 
 ; ------------------------------------------
 ; Wenn diese Option aktiviert wird, werden die Seiten 1 und 4 eines A3 Zeugnisses nicht ausgedruckt und gleichzeitig der Duplexdruck deaktiviert 
 ; (z. B. wenn vorbedrucktes Zeugnispapier verwendet wird). 
-; mÃ¶gliche Angaben: J=Ja und N=Nein
+; mögliche Angaben: J=Ja und N=Nein
 ;
 ; FarbeNotenfeld
 ; --------------
-; legt die Hintergrundfarbe der Notenfelder auf dem Zeugnis fest. Die Angabe erfolgt in der Form R,G,B (Rot,GrÃ¼n,Blau). Standardwert ist 192,192,192
-; mÃ¶gliche Angaben: R,G,B, jeweils mit Werten von 0-255 fÃ¼r R,G,B
+; legt die Hintergrundfarbe der Notenfelder auf dem Zeugnis fest. Die Angabe erfolgt in der Form R,G,B (Rot,Grün,Blau). Standardwert ist 192,192,192
+; mögliche Angaben: R,G,B, jeweils mit Werten von 0-255 für R,G,B
 ;
 ; VersetzungBeginnASDJahrgang
 ; -------------------
 ; legt fest, in welcher Jahrgangsstufe das erste mal eine Versetzung ausgesprochen wird.
-; MÃ¶gliche Angaben: 05 oder 06 oder 07 oder 08 oder 09
+; Mögliche Angaben: 05 oder 06 oder 07 oder 08 oder 09
 ;
 ; WPBeginnASDJahrgang
 ; -------------------
 ; legt fest, in welcher Jahrgangsstufe der Wahlpflichtunterricht an Gesamt- und Sekundarschulen beginnt.
-; mÃ¶gliche Angaben: 06 oder 07 oder 08
+; mögliche Angaben: 06 oder 07 oder 08
 ;
 ; ZeugnisVorname
 ; -------------------
-; Legt fest, wie der Vorname auf dem Zeugnis erzeugt werden soll. UnabhÃ¤ngig von der Wahl der Option wird bei einem leeren Feld "Weitere Vornamen"
+; Legt fest, wie der Vorname auf dem Zeugnis erzeugt werden soll. Unabhängig von der Wahl der Option wird bei einem leeren Feld "Weitere Vornamen"
 ; das Feld Vorname verwendet.
-; mÃ¶gliche Angaben: 
+; mögliche Angaben: 
 ; V=Nur das Feld "Vorname" verwenden 
-; W=Das Feld "Vorname" durch AnhÃ¤ngen des Feldes "Weitere Vornamen" ergÃ¤nzen
+; W=Das Feld "Vorname" durch Anhängen des Feldes "Weitere Vornamen" ergänzen
 ; A=Nur das Feld "Weitere Vornamen" verwenden, es wird damit als "ALLE Vornamen" interpretiert
 ;
 ; ZeugnisDatumQuelle
 ; ------------------
 ; legt fest, wie das Zeugnisformular das Zeugnisdatum ermitteln soll. Bleibt der Eintrag leer, wird ein Auswahldialog eingeblendet.
-; mÃ¶gliche Angaben:
+; mögliche Angaben:
 ; Z=Zeugnisdatum des akt. Lernabschnittes
 ; K=Konferenzdatum des akt. Lernabschnittes 
-; V=entspricht Z mit der Ausnahme fÃ¼r nicht versetzte SchÃ¼ler im zweiten Halbjahr, dort wird K gewÃ¤hlt
+; V=entspricht Z mit der Ausnahme für nicht versetzte Schüler im zweiten Halbjahr, dort wird K gewählt
 ; E=Entlassdatum
 ; S=Schulwechseldatum
 ; A=Aktuelles Tagesdatum
@@ -224,120 +210,111 @@ UnicodeInPDFVerwenden=N
 ;
 ; ZeugnisDatumAngabe
 ; ------------------
-; wird nur gewÃ¤hlt, wenn die ZeugnisDatumQuelle I ist. Dann wird das angegebene Datum im Zeugnis eingetragen
-; mÃ¶gliche Angaben: Datum des Zeugnisses im Kurzformat, also 01.08.2019
+; wird nur gewählt, wenn die ZeugnisDatumQuelle I ist. Dann wird das angegebene Datum im Zeugnis eingetragen
+; mögliche Angaben: Datum des Zeugnisses im Kurzformat, also 01.08.2019
 ;
 ; ZeugnisInformationenQuelle 
 ; ----------------------
 ; legt fest, woher das Zeugnisformular die Angaben zum Wiederanfang des Unterrichts und zum Eltrernsprechtag nehmen soll.
 ; Bleibt der Eintrag leer, so werden die Informationen ignoriert.
-; mÃ¶gliche Angaben: F=Abfrage beim Formularaufruf, I=Angaben aus INI-Datei, D=Datenbank (D ist noch in SchILD zu implementieren)
+; mögliche Angaben: F=Abfrage beim Formularaufruf, I=Angaben aus INI-Datei, D=Datenbank (D ist noch in SchILD zu implementieren)
 ; 
 ; ZeugnisInformationenWiederanfangAngabe 
 ; --------------------------------------
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
-; mÃ¶gliche Angabe: Text mit Datum und Uhrzeit, z. B. 1. August 2019 um 08:00 Uhr
+; mögliche Angabe: Text mit Datum und Uhrzeit, z. B. 1. August 2019 um 08:00 Uhr
 ;
 ; ZeugnisInformationenElternsprechtagAngabe1 
 ; ------------------------------------------
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
-; mÃ¶gliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
+; mögliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. August 2019 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ;
 ; ZeugnisInformationenElternsprechtagAngabe2 
 ; ------------------------------------------
 ; wird nur ausgewertet, wenn ZeugnisInformationenQuelle auf I gesetzt wurde.
 ; Die Angabe muss mit einer Datumsangabe beginnen und den zu druckenden Text enthalten.
-; mÃ¶gliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
+; mögliche Angabe: Text mit Datum und Uhrzeiten, z. B. 1. Februar 2020 von 08:00 Uhr bis 12:00 Uhr und von 16:00 Uhr bis 19:00 Uhr
 ;
 ; UnterschriftenSLAL
 ; ----------------------
 ; legt fest, ob der Schulleiter oder der Abteilungsleiter das Zeugnis unterschreibt. Ist der Wert T gesetzt, erfolgt bei Zeugnisaufruf
-; eine Textabfrage. Der Defaultwert dafÃ¼r wird in UnterschriftenSLALText festgelegt.
-; mÃ¶gliche Angaben: 
+; eine Textabfrage. Der Defaultwert dafür wird in UnterschriftenSLALText festgelegt.
+; mögliche Angaben: 
 ; S=Schulleitung aus Datenbank
 ; V=stellvertretende Schulleitung aus Datenbank
 ; A=Abteilungsleitung aus Datenbank
 ; T=Texteingabe bei Zeugnisaufruf. Details siehe UnterschriftenSLALText.
+; I=Text aus INI-Datei, funktioniert wie T, allerdings wird der Defaulttext aus UnterschriftenSLALText ohne weitere Nachfrage genutzt.
 ;
 ; UnterschriftenSLALText
 ; ----------------------
-; legt den Defaulttext fest, der bei der Textabfrage fÃ¼r das Unterschriftenfeld der Schul- bzw. Abteilungsleitung voreingestellt ist.
-; mÃ¶gliche Angaben:
+; legt den Defaulttext fest, der bei der Textabfrage für das Unterschriftenfeld der Schul- bzw. Abteilungsleitung voreingestellt ist.
+; mögliche Angaben:
 ; 
-; - LehrerkÃ¼rzel; falls andere Funktion als "Schulleiter" gewÃ¼nscht, 
+; - Lehrerkürzel; falls andere Funktion als "Schulleiter" gewünscht, 
 ;   kann man diese durch Komma getrennt in Klammern angeben. Beispiel: MUST,(Beratungslehrerin)
 ; - exakter Text, der unter der Unterschriftenlinie gedruckt werden soll. 
-;   Er wird direkt ins Zeugnis Ã¼bernommen. Beispiel: Max Mustermann, Konrektor
+;   Er wird direkt ins Zeugnis übernommen. Beispiel: Max Mustermann, Konrektor
 ;
 ; UnterschriftenKL
 ; ----------------------
 ; legt fest, welcher Name unter dem Unterschriftenfeld der Klassenleitung steht. Ist der Wert T gesetzt, erfolgt bei Zeugnisaufruf
-; eine Textabfrage. Der Defaultwert dafÃ¼r wird in UnterschriftenKLText festgelegt.
-; mÃ¶gliche Angaben: 
+; eine Textabfrage. Der Defaultwert dafür wird in UnterschriftenKLText festgelegt.
+; mögliche Angaben: 
 ; K=Klassenleitung aus Datenbank
 ; T=Texteingabe bei Zeugnisaufruf. Details siehe UnterschriftenKLText.
+; I=Text aus INI-Datei, funktioniert wie T, allerdings wird der Defaulttext aus UnterschriftenKLText ohne weitere Nachfrage genutzt.
 ;
 ; UnterschriftenKLText
 ; ----------------------
-; legt den Defaulttext fest, der bei der Textabfrage fÃ¼r das Unterschriftenfeld der Klassenleitung voreingestellt ist.
-; mÃ¶gliche Angaben:
+; legt den Defaulttext fest, der bei der Textabfrage für das Unterschriftenfeld der Klassenleitung voreingestellt ist.
+; mögliche Angaben:
 ; 
-; - LehrerkÃ¼rzel; falls andere Funktion als "Klassenlehrer" gewÃ¼nscht, 
+; - Lehrerkürzel; falls andere Funktion als "Klassenlehrer" gewünscht, 
 ;   kann man diese durch Komma getrennt in Klammern angeben. Beispiel: MUST,(Beratungslehrerin)
 ; - exakter Text, der unter der Unterschriftenlinie gedruckt werden soll. 
-;   Er wird direkt ins Zeugnis Ã¼bernommen. Beispiel: Max Mustermann, Klassenlehrer
+;   Er wird direkt ins Zeugnis übernommen. Beispiel: Max Mustermann, Klassenlehrer
 ;
 ; UnterschriftenMitNachnamen
 ; --------------------------
 ; legt fest, ob statt der allgemeinen Bezeichnungen der Unterschriftenfelder die Nachnamen der betroffenen Personen verwendet
-; werden sollen. Wenn hier die Option N gewÃ¤hlt wird, werden auch keine Vornamen, Titel und Amtsbezeichnungen gesetzt.
-; mÃ¶gliche Angaben: J=Ja und N=Nein
+; werden sollen. Wenn hier die Option N gewählt wird, werden auch keine Vornamen, Titel und Amtsbezeichnungen gesetzt.
+; mögliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitAmtsbezeichnungen 
 ; ----------------------------------
-; legt fest, ob die Amtsbezeichnungen bei Unterschriften ergÃ¤nzt werden soll.
-; mÃ¶gliche Angaben: J=Ja und N=Nein
+; legt fest, ob die Amtsbezeichnungen bei Unterschriften ergänzt werden soll.
+; mögliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitVornamen
 ; -------------------------
-; legt fest, ob die ersten Buchstaben der Vornamen bei Unterschriften ergÃ¤nzt werden soll.
-; mÃ¶gliche Angaben: J=Ja und N=Nein
+; legt fest, ob die ersten Buchstaben der Vornamen bei Unterschriften ergänzt werden soll.
+; mögliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitVornamenNurErster 
 ; ----------------------------------
-; legt fest, ob nur der erste Vorname bei der Option UnterschriftenMitVornamen berÃ¼cksichtigt werden soll.
-; mÃ¶gliche Angaben: J=Ja und N=Nein
+; legt fest, ob nur der erste Vorname bei der Option UnterschriftenMitVornamen berücksichtigt werden soll.
+; mögliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitTitel
 ; ----------------------
-; legt fest, ob ein Titel bei Unterschriften ergÃ¤nzt werden soll.
-; mÃ¶gliche Angaben: J=Ja und N=Nein
+; legt fest, ob ein Titel bei Unterschriften ergänzt werden soll.
+; mögliche Angaben: J=Ja und N=Nein
 ;
 ; UnterschriftenMitStvKlassenlehrer
 ; ---------------------------------
 ; legt fest, ob auch der stellvert. Klassenlehrer mit in den Unterschriften ausgegeben werden soll.
-; mÃ¶gliche Angaben: J=Ja und N=Nein
+; mögliche Angaben: J=Ja und N=Nein
 ;
 ; SchulabschlussQuelle
 ; ------------------
 ; legt fest, wo die Abschlusszeugnisse die Informationen zum Schulabschluss entnehmen sollen. 
 ; Sollte kein Abschluss gefunden werden, so wird beim Zeugnisdruck gefragt.
-; mÃ¶gliche Angaben:
+; mögliche Angaben:
 ; H=Eintrag des Abschlusses im aktuellen Halbjahr
-; L=Eintrag aus Liste der AbschlÃ¼sse in SchILD (L ist noch in SchILD zu implementieren)
+; L=Eintrag aus Liste der Abschlüsse in SchILD (L ist noch in SchILD zu implementieren)
 ; F=Abfrage beim Formularaufruf
 ;
-; SchriftenInPDFEinbetten
-; -----------------------
-; legt fest, ob bei der Erzeugung der PDF-Dateien die verwendete Schrift mit in die PDF eingebettet werden soll.
-; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groÃŸ werden.
-; mÃ¶gliche Angaben: J=Ja und N=Nein
-;
-; UnicodeInPDFVerwenden
-; ---------------------
-; legt fest, ob bei der Erzeugung der PDF-Dateien fÃ¼r Texte die Unicode-Codierung verwendet werden soll.
-; Achtung: Dadurch kann eine einzelne Zeugnis-PDF-Datei mehrere MB groÃŸ werden.
-; mÃ¶gliche Angaben: J=Ja und N=Nein
-;
+
